<resources>
    <string name="app_name">HelloWorld</string>

    <string name="tab_bar_layout">Layout</string>
    <string name="tab_bar_control">Control</string>
    <string name="tab_bar_data">Data</string>
    <string name="tab_bar_network">Network</string>
    <string name="tab_bar_item_placeholder">Item</string>

    <!--Linear Layout-->
    <string name="to">To</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>

    <!--Relative Layout-->
    <string name="reminder">Reminder Name</string>
    <string name="done">Done</string>

    <!--Table Layout-->
    <string name="product_id">Product ID</string>
    <string name="product_name">Product Name</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="add_button_title">ADD</string>
    <string name="find_button_title">FIND</string>
    <string name="delete_button_title">DELETE</string>

    <!--FrameLayout-->
    <string name="framelayout_text_view_text">I\'m a text view with long long content!</string>
    <string name="framelayout_button_title">I\'m a button!</string>

    <!--ConstraintLayout-->
    <string name="anchor_button_title">Anchor</string>
    <string name="west_north_button_title">West North</string>
    <string name="west_south_button_title">West South</string>
    <string name="east_north_button_title">East North</string>
    <string name="east_south_button_title">East South</string>

    <!--Button-->
    <string name="text_button_title">Alarm</string>
    <string name="button_greet_message">Hello, I\'m a button</string>

    <!--CheckBox-->
    <string name="meat">Meat</string>
    <string name="cheese">Cheese</string>

    <!--RadioButton-->
    <string name="pirates">Pirates</string>
    <string name="ninjas">Ninjas</string>

    <!--Picker-->
    <string name="pick_time">Pick Time</string>
    <string name="pick_date">Pick Date</string>

    <!--Network-->
        <string name="welcome_message">Welcome to Network Connect!
        Click FETCH to fetch the first 500 characters of raw HTML from cn.bing.com.
    </string>
    <string name="fetch_text">Fetch</string>
    <string name="clear_text">Clear</string>
    <string name="connection_error">Connection error.</string>
    <string name="fetch_cancelled">Fetch cancelled.</string>

    <!--Preferences-->
    <string name="pref_downloadFeedType">Download Feed</string>
    <string name="pref_downloadFeedType_default">Wi-Fi</string>
    <string name="pref_downloadFeedType_any_network">Any</string>
    <string name="pref_downloadFeedType_summary">Network connectivity required to download feed.</string>
    <string name="pref_showSummaries">Show Summaries</string>
    <string name="pref_showSummaries_summary">Show a summary for each link.</string>
    <string name="wifi_connected">Wi-Fi Connected</string>
    <string name="lost_connection">Lost Connection</string>

    <string name="volley_demo_header_title">Volley Demo</string>
    
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sed ipsum a nunc dapibus lobortis ac quis leo. Maecenas eget risus ac sapien efficitur interdum. Suspendisse in magna sed mi porttitor porta in pretium purus. Cras in massa sit amet dui posuere iaculis nec nec tortor. Donec laoreet urna vitae rhoncus suscipit. Nulla et varius nisl, non tincidunt enim. Phasellus sed sagittis risus, non imperdiet purus. Aenean pellentesque mauris ipsum, eu posuere magna ullamcorper non. Integer tempor posuere tristique. Aenean lobortis lacus non malesuada facilisis. Aenean augue nibh, condimentum nec laoreet ut, tincidunt vitae orci. Aenean vitae pellentesque arcu. Vivamus tempus, nisl quis finibus facilisis, metus mauris vestibulum ex, in auctor urna nibh nec mauris. Duis lobortis sodales augue, non egestas purus.

Integer viverra dictum lacinia. Aliquam erat volutpat. Proin in justo neque. Aenean efficitur quam ut libero facilisis fringilla. Suspendisse in porta turpis. Aenean vehicula felis id felis laoreet euismod. Sed porttitor dapibus nunc ac pulvinar. Suspendisse pretium diam mauris. Fusce sodales euismod ligula vestibulum dictum. Nulla facilisi. Nunc vel varius urna, ut interdum augue.

Donec convallis sed velit non bibendum. Proin suscipit tincidunt ipsum, in faucibus quam consectetur vitae. Integer consequat magna ut odio rutrum iaculis. Sed tincidunt ut tortor mattis lacinia. Aenean elit orci, laoreet sed auctor ut, bibendum vel odio. Ut imperdiet erat odio, vel aliquam elit feugiat et. Praesent lobortis mattis leo ut placerat. Morbi vestibulum nibh a mi lacinia, id vulputate quam ornare.

Sed gravida vitae massa ut posuere. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam congue semper blandit. Donec pulvinar nulla ac dapibus eleifend. Nam laoreet in eros a placerat. Vivamus ultrices porta varius. Nunc posuere ex sit amet leo volutpat, ut faucibus risus sollicitudin. Suspendisse venenatis augue ac rhoncus rutrum. Nulla eget tortor eu velit mattis tincidunt. Sed venenatis bibendum felis vitae facilisis. Proin aliquam iaculis massa, vitae convallis erat tristique ac. Fusce consequat pulvinar enim.

Vivamus vitae tortor risus. Vestibulum ac magna mauris. Suspendisse scelerisque lacus sit amet eros interdum venenatis. Sed molestie lobortis lacinia. Nunc quis efficitur eros. Aenean ut venenatis eros. In efficitur, lorem quis placerat sollicitudin, neque mauris gravida nulla, sed facilisis neque purus nec tortor. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Morbi ut volutpat ligula. Duis scelerisque, ipsum ut accumsan faucibus, risus lectus porttitor diam, aliquet luctus ligula neque sit amet lorem. Vivamus ac nunc eros. Cras pharetra risus lectus. Aliquam erat volutpat.</string>
    <string name="silent_mode">Silent Mode</string>
    <string name="internal_storage_sample_title">Demostrate how to use internal storage, you input content will persistent at internale storage so it can be hold cross session.</string>
    <string name="internal_storage_input_hint">Say anything that your current want to say!</string>
    <string name="save_button_title">Save</string>
    <string name="external_storage_button_title">Save to external storage</string>
    <string name="external_storage_cannot_write_message">Can\'t write to external storage!</string>
    <string name="external_storage_no_picture_directory_message">There isn\'t picture directory in external storage!</string>
    <string name="save_successfully_message">Save to external storage successfully!</string>
</resources>
